# llamachat

./: Dockerfile  GEMMA_TERMS_OF_USE.txt  Makefile  NOTICE.txt  README.md  docker-compose.yaml  pyproject.toml
src/llamachat/: config.py  config.yaml  llamachat.py  logger.py
tests/: test_llamachat.py
